attachShadow should support attaching a shadow root to a main element https://bugs.webkit.org/show_bug.cgi?id=197726

Reviewed by Antti Koivisto.

Source/WebCore:

Added main element to the list of elements that support an author shadow root.

Test: fast/shadow-dom/attach-shadow-to-elements.html

* dom/Element.cpp:
(WebCore::canAttachAuthorShadowRoot):

LayoutTests:

Added a test for attachShadow.

* fast/shadow-dom/attach-shadow-to-elements-expected.txt: Added.
* fast/shadow-dom/attach-shadow-to-elements.html: Added.


Canonical link: https://commits.webkit.org/216099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250770 268f45cc-cd09-0410-ab3c-d52691b4dbfc